api/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: geo
    environment: production
